ZOOKEEPER-2914: Clear or suppress Java 9 compiler warning messages
It was a little bit trickier than trunk, but I've tried to do my best to remove almost all warnings.

Author: Andor Molnar <andor@cloudera.com>

Reviewers: Patrick Hunt <phunt@apache.org>

Closes #393 from dolphy17/ZOOKEEPER-2914-3.4

Change-Id: I9ae5bd1ebb3f1dda0a391b03ea23623eeb8d4d8d