@@ -20,6 +20,7 @@ package org.apache.zookeeper.test.system;
 
 import java.io.File;
 import java.io.IOException;
+import java.lang.reflect.InvocationTargetException;
 import java.net.InetAddress;
 import java.net.InetSocketAddress;
 import java.net.UnknownHostException;
@@ -221,11 +222,17 @@ public class BaseSysTest extends TestCase {
         fakeBaseClients = new Instance[count];
         for(int i = 0; i < count; i++) {
             try {
-                fakeBaseClients[i] = clazz.newInstance();
+                fakeBaseClients[i] = clazz.getDeclaredConstructor().newInstance();
             } catch (InstantiationException e) {
                 e.printStackTrace();
                 return;
             } catch (IllegalAccessException e) {
+                e.printStackTrace();
+                return;
+            } catch (NoSuchMethodException e) {
+                e.printStackTrace();
+                return;
+            } catch (InvocationTargetException e) {
                 e.printStackTrace();
                 return;
             }
