@@ -269,7 +269,7 @@ public class InstanceContainer implements Watcher, AsyncCallback.ChildrenCallbac
                     }
                     try {
                         Class c = Class.forName(clazz);
-                        i = (Instance)c.newInstance();
+                        i = (Instance)c.getDeclaredConstructor().newInstance();
                         Reporter reporter = new MyReporter(child);
                         i.setReporter(reporter);
                         i.configure(conf);
